# tsc-plugins

./: .gitignore  BUILD.md  DESIGN-SPEC.md
systemd-services/: Cargo.toml
systemd-services/.megg/: info.md
systemd-services/frontend/: package-lock.json  package.json  vite.config.ts
systemd-services/frontend/src/: App.tsx  main.tsx  types.ts
systemd-services/frontend/src/components/: LogDialog.tsx  ServiceCard.tsx  ServicesTab.tsx  SettingsTab.tsx  StatusBadge.tsx
systemd-services/frontend/src/hooks/: useServices.ts  useSettings.ts
systemd-services/openspec/: project.md
systemd-services/openspec/changes/2026-01-15-add-systemd-services-plugin/: proposal.md  tasks.md
systemd-services/openspec/changes/v0.1.0-initial-build/: proposal.md  (+1 more)
systemd-services/src/: error.rs  lib.rs  main.rs
systemd-services/src/handlers/: mod.rs  services.rs  tests.rs
systemd-services/src/systemctl/: executor.rs  mod.rs  parser.rs  tests.rs
systemd-timers/: BUILD-COMPLETE.md  Cargo.toml  package-lock.json
systemd-timers/.megg/: info.md
systemd-timers/docs/: logging-setup.md
systemd-timers/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
systemd-timers/frontend/src/: App.tsx  api.ts  main.tsx  types.ts
systemd-timers/openspec/: project.md
systemd-timers/src/: command.rs  error.rs  handlers.rs  journal.rs  lib.rs  log_reader.rs  main.rs  schedule.rs  systemctl.rs
systemd-timers/tests/fixtures/: README.md  journal-failed.json  journal-success.json  list-timers-output.txt  show-timer-disabled.txt  show-timer-enabled.txt
(+36 files in other folders)
