[package]
name = "systemd-services"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemd-services"
path = "src/main.rs"

[lib]
name = "systemd_services"
path = "src/lib.rs"

[dependencies]
toru-plugin-api = { path = "../../toru-steering-center/toru-plugin-api" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
